--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.3.1"
   },
   "main": "index.js",
   "author": "isma3l <karlo.ismael@gmail.com>",
