--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
+    "buffer": "^6.0.3",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.3",
+    "https-browserify": "^1.0.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "rss-parser": "^3.12.0",
+    "stream-http": "^3.2.0",
+    "timers-browserify": "^2.0.12",
     "typescript": "^4.9.5",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
