--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.3",
     "https-browserify": "^1.0.0",
+    "moment": "^2.29.4",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "rss-parser": "^3.12.0",
+    "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "timers-browserify": "^2.0.12",
     "typescript": "^4.9.5",
